--- a/prosperityWebApp/prosperity/templates/measures/wealth/expense.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/expense.html
@@ -48,7 +48,7 @@
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -127vh; left: 18.5vw; width: 10vw; height: 2.3vh;">
-                <a href=""> Savings <i class="bi-arrow-clockwise"></i></a>
+                <a href="mes_saving"> Savings <i class="bi-arrow-clockwise"></i></a>
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -117vh;  left: 16.5vw; width: 8vw; height: 2.3vh;">
