--- a/prosperityWebApp/prosperity/templates/measures/wealth/saving.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/saving.html
@@ -9,6 +9,7 @@
     {% load static %} <link rel="stylesheet" href="{% static 'health.css' %}">
     {% load static %} <link rel="stylesheet" href="{% static 'mes_hr.css' %}">
     {% load static %} <link rel="stylesheet" href="{% static 'mes_income.css' %}">
+    {% load static %} <link rel="stylesheet" href="{% static 'mes_saving.css' %}">
     <link rel="stylesheet" href="{% static 'genderDob.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -74,47 +75,38 @@
 
     <div id="income_middle" style=" position: absolute; top: 209vh;" >
         <div id="hr_middle_div1">
-            <p id="hr_middle_div1_para1">Income</p>
+            <p id="hr_middle_div1_para1">Saving</p>
         </div>
 
         <div id="income_middle_div2">
-            <p id="income_middle_div2_para1">Total Income:</p>
-            <p id="income_middle_div2_para2">₹ 76,500/-</p>
+            <p id="income_middle_div2_para1">Total Saving:</p>
+            <p id="income_middle_div2_para2">₹ 54,500/-</p>
         </div>
 
         <div id="income_middle_div1">
-            <p id="income_middle_div1_para1">Occupation Type</p>
-              <select id="dropdownMenuButton">
-                <a href=""><option value="Salaried" selected>Salaried</option></a>
-                <a href=""><option value="Business" >Business</option></a>
-                
-              </select>
+            <p id="income_middle_div1_para1">Enter Your Total Savings</p>
+            <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ 54,500/-">
+            <p id="saving_1">Acc: <b>HDFC Bank</b></p>
         </div>
-
-        <div id="income_middle_div3">
-            <p style=" position: absolute;width: 22vw;font-family: 'Poppins';font-style: normal;font-weight: 800; font-size: 2vh;line-height: 24px;
-            color: #5B6CAC;
-            top: -4vh;" id="selected"></p>
-            <input type="text" name="" id="income_middle_div3_input" value="in ₹">
+        <div id="newDiv" style="display:none;">
+            <p id="income_middle_div1_para1">Enter Your Total Savings</p>
+            <input  inputmode="numeric" id="dropdownMenuButton2" placeholder="₹ 54,500/-">
+            <p id="saving_1">Acc: <b>HDFC Bank</b></p>
         </div>
-
-        <div id="income_middle_div4">
-            <p id="income_middle_div1_para1">Enter Anouther Income Source</p>
-            <label id="income_middle_div4_input" for="Business">Income From Business
-                <img src="{% static "media/plusss.png" %}" alt="">
-            </label>
-            <input type="text" hidden id="Business" name="Business">
-
-            {% comment %} <input type="text" name="" id="income_middle_div4_input" value="Income From Business"> 
-            <hr id="income_middle_div4_hr">
-            <input type="text" name="" id="income_middle_div4_input" value="Income From Investments">
-            <hr id="income_middle_div4_hr">
-            <input type="text" name="" id="income_middle_div4_input" value="Income From Rental Property"> {% endcomment %}
+        <div style="display:block;" id="lowerDiv">
+            <hr id="saving_hr1">
+            <div id="saving_div1">
+                <a id="saving_div1_1" onclick="showDiv()" href="javascript:void(0)">Add Another Bank Account</a>
+                <img id="saving_div1_2" src="{% static "media/plusss.png" %}" alt="">
+            </div>
+            <hr id="saving_hr2">
+            <div id="saving_div2">
+                <p id="saving_div2_1">Do you have any emergency funds other than savings </p>
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            </div>
+    
+            <input style="top: -120vh;left: 39vw;" type="submit" name="" id="income_middle_div5" value="Record">
         </div>
-
-
-        <hr id="income_middle_hr">
-        <input type="submit" name="" id="income_middle_div5" value="Record">
     </div>
 
     <div id="hr_right">
@@ -128,23 +120,19 @@
             <p id="hr_right_div2_para1">Sync Google fit</p>
             <a href=""><i id="hr_right_div2_icon" class="bi-arrow-repeat"></i></a>
         </div>
+
     </div>
 
     
     <script>
-        
-
-        var selected = document.getElementById("dropdownMenuButton").value;
-        console.log(selected)
-        if(selected === "Business"){
-            document.getElementById("selected").innerHTML = "Enter Your Annual Income (Average)";
-            
-        }else if(selected === "Salaried"){
-            document.getElementById("selected").innerHTML = "Enter Your Monthly Income";
-
+        var one = document.getElementById("dropdownMenuButton1").value;
+        var two = document.getElementById("dropdownMenuButton2").value;
+        {% comment %} var op = one + two;
+        document.getElementById("income_middle_div2_para2").innerHTML =   op; {% endcomment %}
+        function showDiv(){
+            document.getElementById("newDiv").style.display = "block";
+            document.getElementById("lowerDiv").style.top = "18vh";
         }
-        
-
     </script>
     
 
