till assets and investments

--- a/prosperityWebApp/prosperity/templates/measures/wealth/addDG.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/addDG.html
@@ -75,12 +75,12 @@
 
     <div id="income_middle" style=" position: absolute; top: 209vh;" >
         <div id="hr_middle_div1">
-            <p id="hr_middle_div1_para1" style="width: 18vw;">Add Bonds</p>
+            <p id="hr_middle_div1_para1" style="width: 18vw;">Add Digital Gold</p>
         </div>
 
         <div id="income_middle_div1" style="top: -167vh;">
             <p id="income_middle_div1_para1">Company Name</p>
-            <input type="text" id="dropdownMenuButton1" placeholder="HDFC 20th June 2022">
+            <input type="text" id="dropdownMenuButton1" placeholder="Motilal Digital Gold">
         </div>
 
         <div id="income_middle_div1" style="top: -153vh;">
@@ -98,34 +98,46 @@
         <div id="income_middle_div1" style="top: -140vh;">
             <p id="income_middle_div1_para1">Invested Amount</p>
             <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ Enter Amount">
-        </div> 
-
+        </div>
+        
         <div id="income_middle_div1" style="top: -126vh;">
-            <p id="income_middle_div1_para1">Buying Date</p>
-            <input type="date" id="dropdownMenuButton1" placeholder="DD/MM/YYY" style="width: 11vw;">
+            <p id="income_middle_div1_para1">Buying Price</p>
+            <input inputmode="numeric" id="dropdownMenuButton1" placeholder="Price" style="width: 11vw;">
         </div>
 
         <div id="income_middle_div1" style="top: -126vh; left: 51vw;">
-            <p id="income_middle_div1_para1">Interest Rate</p>
-            <input inputmode="numeric"  id="dropdownMenuButton1" placeholder="In %" style="width: 11vw;">
+            <p id="income_middle_div1_para1">Quantity</p>
+            <input inputmode="numeric"  id="dropdownMenuButton1" placeholder="EX. 12" style="width: 11vw;">
         </div>
 
-        <div id="income_middle_div1" style="top: -112vh;">
-            <p id="income_middle_div1_para1">Current Return</p>
-            <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ Enter Amount">
-        </div> 
-
-        <div id="income_middle_div1" style="top: -98vh;">
-            <p id="income_middle_div1_para1">Tenure</p>
-            <select name="Tenure" id="dropdownMenuButton1" style="width: 16vw;">
-                <option value="volvo">6 years</option>
-                <option value="saab">9 years</option>
-                <option value="opel">12 years</option>
-                <option value="audi" selected>15 years</option>
-              </select>
+        <div style="position: relative;top: 9vh;">
+            <div id="income_middle_div1" style="top: -126vh;">
+                <p id="income_middle_div1_para1">Buying Date</p>
+                <input type="date" id="dropdownMenuButton1" placeholder="DD/MM/YYY" style="width: 11vw;">
+            </div>
+    
+            <div id="income_middle_div1" style="top: -126vh; left: 51vw;">
+                <p id="income_middle_div1_para1">Interest Rate</p>
+                <input inputmode="numeric"  id="dropdownMenuButton1" placeholder="In %" style="width: 11vw;">
+            </div>
+    
+            <div id="income_middle_div1" style="top: -112vh;">
+                <p id="income_middle_div1_para1">Current Return</p>
+                <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ Enter Amount">
+            </div> 
+    
+            <div id="income_middle_div1" style="top: -98vh;">
+                <p id="income_middle_div1_para1">Tenure</p>
+                <select name="Tenure" id="dropdownMenuButton1" style="width: 16vw;">
+                    <option value="volvo">6 years</option>
+                    <option value="saab">9 years</option>
+                    <option value="opel">12 years</option>
+                    <option value="audi" selected>15 years</option>
+                  </select>
+            </div>
         </div>
 
-        <input type="submit" name="" id="income_middle_div5" value="Record" style="top: -86vh; left: 39vw;">
+        <input type="submit" name="" id="income_middle_div5" value="Record" style="top: -70vh; left: 39vw;">
     </div>
 
     <div id="hr_right">
