--- a/prosperityWebApp/prosperity/templates/measures/wealth/income.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/income.html
@@ -55,11 +55,11 @@
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -108vh; left: 18.5vw; width: 5vw; height: 2.3vh;">
-                <a href="mes_waterIntake"> Assets </a>
+                <a href="mes_assets"> Assets </a>
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -98vh; left: 18vw; width: 6vw; height: 2.3vh;">
-                <a href="mes_calories"> Investments</a>
+                <a href="mes_inv"> Investments</a>
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -88vh; left: 18vw; width: 6vw; height: 2.3vh;">
