--- a/prosperityWebApp/prosperity/templates/measures/wealth/addPPF.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/addPPF.html
@@ -75,47 +75,20 @@
 
     <div id="income_middle" style=" position: absolute; top: 209vh;" >
         <div id="hr_middle_div1">
-            <p id="hr_middle_div1_para1" style="width: 18vw;">Add Bonds</p>
+            <p id="hr_middle_div1_para1" style="width: 18vw;">Add PPF</p>
         </div>
 
         <div id="income_middle_div1" style="top: -167vh;">
-            <p id="income_middle_div1_para1">Company Name</p>
-            <input type="text" id="dropdownMenuButton1" placeholder="HDFC 20th June 2022">
+            <p id="income_middle_div1_para1">Annual Investment Amount</p>
+            <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ Enter Amount">
         </div>
 
         <div id="income_middle_div1" style="top: -153vh;">
-            <p id="income_middle_div1_para1">Status</p>
-            <div class="grid-container" style="position: absolute; top:-28vh; left: -4vw;">
-                <select id="male_lable" class="form-select grid-item" multiple aria-label="multiple select example">
-                    <option id="male" value="1">Active</option>
-                </select>
-                <select id="female_lable" class="form-select grid-item" multiple aria-label="multiple select example">
-                    <option id="female" value="1">Inactive</option>
-                </select>
-            </div>
+            <p id="income_middle_div1_para1">Anuual Rate of Interest</p>
+            <input inputmode="numeric"  id="dropdownMenuButton1" placeholder="7.16 %" style="width: 16vw;">
         </div>
 
-        <div id="income_middle_div1" style="top: -140vh;">
-            <p id="income_middle_div1_para1">Invested Amount</p>
-            <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ Enter Amount">
-        </div> 
-
-        <div id="income_middle_div1" style="top: -126vh;">
-            <p id="income_middle_div1_para1">Buying Date</p>
-            <input type="date" id="dropdownMenuButton1" placeholder="DD/MM/YYY" style="width: 11vw;">
-        </div>
-
-        <div id="income_middle_div1" style="top: -126vh; left: 51vw;">
-            <p id="income_middle_div1_para1">Interest Rate</p>
-            <input inputmode="numeric"  id="dropdownMenuButton1" placeholder="In %" style="width: 11vw;">
-        </div>
-
-        <div id="income_middle_div1" style="top: -112vh;">
-            <p id="income_middle_div1_para1">Current Return</p>
-            <input inputmode="numeric" id="dropdownMenuButton1" placeholder="₹ Enter Amount">
-        </div> 
-
-        <div id="income_middle_div1" style="top: -98vh;">
+        <div id="income_middle_div1" style="top: -139vh;">
             <p id="income_middle_div1_para1">Tenure</p>
             <select name="Tenure" id="dropdownMenuButton1" style="width: 16vw;">
                 <option value="volvo">6 years</option>
@@ -125,7 +98,7 @@
               </select>
         </div>
 
-        <input type="submit" name="" id="income_middle_div5" value="Record" style="top: -86vh; left: 39vw;">
+        <input type="submit" name="" id="income_middle_div5" value="Record" style="top: -125vh; left: 39vw;">
     </div>
 
     <div id="hr_right">
