--- a/prosperityWebApp/prosperity/templates/measures/wealth/assets.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/assets.html
@@ -65,11 +65,11 @@
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -88vh; left: 18vw; width: 6vw; height: 2.3vh;">
-                <a href="mes_bp"> Liability </a>
+                <a href="mes_lia"> Liability </a>
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -79vh; left: 18vw; width: 6vw; height: 2.3vh;">
-                <a href="mes_bs"> Insurance  </a>
+                <a href="mes_ins"> Insurance  </a>
             </div>
         </div>
     </div>  
