--- a/prosperityWebApp/prosperity/templates/measures/wealth/income.html
+++ b/prosperityWebApp/prosperity/templates/measures/wealth/income.html
@@ -10,11 +10,21 @@
     {% load static %} <link rel="stylesheet" href="{% static 'mes_hr.css' %}">
     {% load static %} <link rel="stylesheet" href="{% static 'mes_income.css' %}">
     <link rel="stylesheet" href="{% static 'genderDob.css' %}">
+    <link rel="stylesheet" href="{% static 'mes_liability1.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <style>
         html, body { height: 100%; width: 100%; margin: 0; }
+        #expense_hr {
+            position: absolute;
+            width: 21vw;
+            height: 0px;
+            opacity: 0.1;
+            border: 1px solid #5B6CAC;
+            top: 7vh;
+            left: 1vw;
+        }
     </style>
 </head>
 
@@ -63,11 +73,11 @@
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -88vh; left: 18vw; width: 6vw; height: 2.3vh;">
-                <a href="mes_bp"> Liability </a>
+                <a href="mes_lia"> Liability </a>
             </div>
     
             <div id="bmi_left_bmi_div" style="top: -79vh; left: 18vw; width: 6vw; height: 2.3vh;">
-                <a href="mes_bs"> Insurance  </a>
+                <a href="mes_ins"> Insurance  </a>
             </div>
         </div>
     </div>  
@@ -79,42 +89,67 @@
 
         <div id="income_middle_div2">
             <p id="income_middle_div2_para1">Total Income:</p>
-            <p id="income_middle_div2_para2">₹ 76,500/-</p>
+            <p id="income_middle_div2_para2" style="left: -0.5vw;"> 76,500/-</p>
         </div>
 
         <div id="income_middle_div1">
             <p id="income_middle_div1_para1">Occupation Type</p>
               <select id="dropdownMenuButton">
-                <a href=""><option value="Salaried" selected>Salaried</option></a>
-                <a href=""><option value="Business" >Business</option></a>
-                
+                <a href=""><option value="Salaried" onclick="showMonth()" selected>Salaried</option></a>
+                <a href=""><option value="Business" onclick="showYear()" >Business</option></a>
               </select>
         </div>
 
         <div id="income_middle_div3">
             <p style=" position: absolute;width: 22vw;font-family: 'Poppins';font-style: normal;font-weight: 800; font-size: 2vh;line-height: 24px;
             color: #5B6CAC;
-            top: -4vh;" id="selected"></p>
+            top: -4vh;" id="selected_month">Enter Your Monthly Income</p>
             <input type="text" name="" id="income_middle_div3_input" value="in ₹">
         </div>
 
-        <div id="income_middle_div4">
-            <p id="income_middle_div1_para1">Enter Anouther Income Source</p>
-            <label id="income_middle_div4_input" for="Business">Income From Business
-                <img src="{% static "media/plusss.png" %}" alt="">
-            </label>
-            <input type="text" hidden id="Business" name="Business">
+        <p style="position: absolute;width: 22vw;
+         font-family:'Poppins';
+         font-style: normal;
+         font-weight: 800; 
+         font-size: 2vh;
+         line-height: 24px;
+         color: #5B6CAC;
+         top: -144vh;left: 39vw; display:none;" id="selected_annual">Enter Your Anually Income (Average)</p>
+        
 
-            {% comment %} <input type="text" name="" id="income_middle_div4_input" value="Income From Business"> 
-            <hr id="income_middle_div4_hr">
-            <input type="text" name="" id="income_middle_div4_input" value="Income From Investments">
-            <hr id="income_middle_div4_hr">
-            <input type="text" name="" id="income_middle_div4_input" value="Income From Rental Property"> {% endcomment %}
+        <div id="income_middle_div4" style="height: 24vh;">
+            <p id="income_middle_div1_para1" style="width: 18vw;">Enter Anouther Income Source</p>
+            <div id="expense_div1_hr">
+                <label id="house_rent_label_lia" for="house_rent">Income From Business
+                    <img id="house_rent_img" src="{% static "media/plusss.png" %}" alt="">
+                </label>
+                <input onclick="myFunction1()" inputmode="numeric" name="" id="house_rent_lia"  style="top: 4vh;  font-family: 'Poppins';
+                color: #5B6CAC;">
+                <hr id="expense_hr">
+            </div>
+
+            <div id="expense_div1_hr">
+                <label id="utility_bill_label_lia" for="utility_bill">Income From Investments
+                    <img id="utility_bill_img" src="{% static "media/plusss.png" %}" alt="">
+                </label>
+                <input onclick="myFunction2()" inputmode="numeric" name="" id="utility_bill_lia" value=""  style="top: 12vh;  font-family: 'Poppins';
+                color: #5B6CAC;">
+                <hr id="expense_hr" style="top: 15vh;">
+            </div>
+
+            <div id="expense_div1_hr">
+                <label id="groceries_label_lia" for="groceries">Income From Rental PropertiesS 
+                    <img id="groceries_img" src="{% static "media/plusss.png" %}" alt="">
+                </label>
+                <input onclick="myFunction3()" inputmode="numeric" name="" id="groceries_lia" value=""  style="top: 20vh;  font-family: 'Poppins';
+                color: #5B6CAC;">
+            </div>
+
         </div>
 
 
         <hr id="income_middle_hr">
-        <input type="submit" name="" id="income_middle_div5" value="Record">
+        <input type="submit" name="" id="income_middle_div5" value="Record" style="top: -90vh; left: 39vw;">
     </div>
 
     <div id="hr_right">
@@ -132,19 +167,32 @@
 
     
     <script>
-        
-
-        var selected = document.getElementById("dropdownMenuButton").value;
-        console.log(selected)
-        if(selected === "Business"){
-            document.getElementById("selected").innerHTML = "Enter Your Annual Income (Average)";
-            
-        }else if(selected === "Salaried"){
-            document.getElementById("selected").innerHTML = "Enter Your Monthly Income";
-
+        function showMonth(){
+            document.getElementById("selected_month").style.display = "block";
+            document.getElementById("selected_annual").style.display = "none";
         }
-        
 
+        function showYear(){
+            document.getElementById("selected_annual").style.display = "block";
+            document.getElementById("selected_month").style.display = "none";
+        }
+
+        function myFunction1() {
+            document.getElementById("house_rent_label_lia").style.fontSize = "1.5vh";
+            document.getElementById("house_rent_img").src = "";
+          }
+          function myFunction2() {
+            document.getElementById("utility_bill_label_lia").style.fontSize = "1.5vh";
+            document.getElementById("utility_bill_img").src = "";
+          }
+          function myFunction3() {
+            document.getElementById("groceries_label_lia").style.fontSize = "1.5vh";
+            document.getElementById("groceries_img").src = "";
+          }
+          function myFunction4() {
+            document.getElementById("travel_label_lia").style.fontSize = "1.5vh";
+            document.getElementById("travel_img").src = "";
+          }
     </script>
     
 
